Some features added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!-- Hero Section Start -->
+
     <section class="hero flex">
         <div class="container">
             <h1>We are digital <br> <span class="color"> Creative Agency</span></h1>
@@ -23,6 +25,88 @@
             <img src="./images/laptop-img.png" alt="">
         </div>
     </section>
+
+    <!-- Hero Section End -->
+
+    <!-- Service Section Start -->
+
+    <section class="service">
+        <div class="container2">
+            <h2>Services.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, et.</p>
+        </div>
+        <div class=" flex">
+            <div class="container3">
+                <a href=""><i class="fa-brands fa-html5"></i></a>
+                <h3>HTML</h3>
+                <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, nam?
+                </p>
+            </div>
+            <div class="container3">
+                <a href=""><i class="fa-brands fa-css3"></i></a>
+                <h3>CSS</h3>
+                <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, nam?
+                </p>
+            </div>
+            <div class="container3">
+                <a href=""><i class="fa-brands fa-react"></i></a>
+                <h3>React.js</h3>
+                <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, nam?
+                </p>
+            </div>
+            <div class="container3">
+                <a href=""><i class="fa-brands fa-node"></i></a>
+                <h3>Node.js</h3>
+                <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, nam?
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Service Section End -->
+
+
+    <!-- Other Section Start -->
+    <section>
+        <div class=" container4 flex">
+            <div>
+                <img src="./images/react-brands.png" alt="">
+            </div>
+            <div>
+                <h1>React</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta assumenda quas, et cumque
+                    harum soluta molestiae reiciendis dolorem facilis.</p>
+            </div>
+        </div>
+
+        <div class="container4 flex">
+
+            <div>
+                <h1>Node</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta assumenda quas, et cumque
+                    harum soluta molestiae reiciendis dolorem facilis.</p>
+            </div>
+            <div>
+                <img src="./images/node-brands.png" alt="">
+            </div>
+
+        </div>
+
+        <div class="container4 flex">
+            <div>
+                <img src="./images/bootstrap-brands.png" alt="">
+            </div>
+            <div>
+                <h1>Bootstrap</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta assumenda quas, et cumque
+                    harum soluta molestiae reiciendis dolorem facilis.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Other Section End -->
+
 
     <script src="all.min.js"></script>
 </body>
