--- a/index.html
+++ b/index.html
@@ -103,10 +103,31 @@
             </div>
         </div>
     </section>
-
-
     <!-- Other Section End -->
 
+    <!-- Client Section Start -->
+    <section>
+        <div class="container5 flex">
+            <div>
+                <img src="./images/person-2.png" alt="">
+            </div>
+            <div>
+                <h1>We are Digital <span class="color">Agency</span> <br> For your Service</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta assumenda quas, et cumque
+                    harum soluta molestiae reiciendis dolorem facilis. Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Quidem dignissimos vitae doloremque, cum accusamus corrupti tempore quas
+                    voluptates impedit veniam?</p>
+            </div>
+        </div>
+    </section>
+    <!-- client Section Start -->
+
+    <!-- Footer Section Start-->
+    <footer>
+        <p> All rights & reserved by Digital Agency || 2022 </p>
+    </footer>
+
+    <!-- Footer Section End-->
 
     <script src="all.min.js"></script>
 </body>
