--- a/index.html
+++ b/index.html
@@ -116,11 +116,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dicta assumenda quas, et cumque
                     harum soluta molestiae reiciendis dolorem facilis. Lorem, ipsum dolor sit amet consectetur
                     adipisicing elit. Quidem dignissimos vitae doloremque, cum accusamus corrupti tempore quas
-                    voluptates impedit veniam?</p>
+                    voluptates impedit veniam?</p> <br>
+                <a class="learn-btn" href="">More About Us <span class="btn"><i
+                            class="fa-solid fa-arrow-right-long"></i></span>
+                </a>
             </div>
         </div>
     </section>
-    <!-- client Section Start -->
+    <!-- client Section Start --
 
     <!-- Footer Section Start-->
     <footer>
